--- a/app/views/home.html
+++ b/app/views/home.html
@@ -2,6 +2,8 @@
 	<input id="search" type="text" placeholder="Search player" ng-model="home.search"/>
 	<input type="submit" value="search" />
 </form>
+{{home.player}}
+{{home.stats}}
 <div ng-show="home.players.length > 0">
 	<div class="col-md-12">	
 		<table class="table">
