--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="/public/css/style.css" />
-		<title>Stats</title>		
+		<title>CSGO Stats - by Thomas Countoures</title>		
 	</head>
 	<body>
 		<ng-include src="'/public/partials/nav.html'"></ng-include>
