--- a/public/partials/nav.html
+++ b/public/partials/nav.html
@@ -3,7 +3,8 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="project-title">
-					<p><a>project battlefy</a></p>
+					<p><a ui-sref="home">project battlefy</a></p>
+					<p>A CS:GO stat finder - by Thomas Countoures</p>
 				</div>
 			</div>					
 		</div>
